<resources>
    <string name="app_name">JokeMachine</string>
    <string name="submit_joke">Submit Joke</string>
    <string name="about_me">About Me</string>
    <string name="action_home">Home</string>
    <string name="action_submit">Submit Joke?</string>
    <string name="action_contact">Contact Me!</string>
    <string name="action_about"> Aboot Me!</string>
    <string name="empty"> </string>
    <string name="first"> Do you want a joke Ammi? </string>
    <string name="second"> Then tap that! </string>
    <string name="oneLiner"> Tap Me For A One Liner! </string>
    <string name="joke"> Tap Me For A Joke! </string>
    <string name="love"> I LOVE YOU AMMI!</string>
    <string name="wtf"> What are you doing?? Go back up! Nothing is down there</string>
    <string name="about1"> HEEYOO!</string>
    <string name="about"> Hi! I am JokeMachine. I have been created specifically for Ammi. My only goal is to make Ammi smile as much as possible. Why? I do not know. Ask my creator that (you can send him an email through the menu on the top right). </string>
    <string name="about2"> What is it like being me? I literally cannot complain (programming will not allow me). But I am happy though, just look at my fuck*** icon.</string>
    <string name="about3"> 01001011 01101001 01101100 01101100 00100000 01101101 01100101 00100000 01110000 01101100 01100101 01100001 01110011 01100101 </string>
    <string name="submit_instruction"> So you want to submit a joke eh? First, make sure yo phone is connected to the internet (duh). Secondly, you CANNOT submit one liners, also, make sure the joke is split into two parts. Lastly, if I do not laugh at the joke, then I am deleting it.</string>
    <string name="submit_hint_one"> First part of the joke</string>
    <string name="submit_hint_second"> Second part of the joke</string>
    <string name="submit_button">Submit joke</string>
    <string name="message_box_title">Title</string>
    <string name="message_timesheet_not_up_to_date">Something</string>
</resources>
