<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.prajjwol.jokemachine.MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="3"
        android:title="@string/action_contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_submit"
        android:orderInCategory="2"
        android:title="@string/action_submit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_aboot"
        android:orderInCategory="4"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
