<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/submit_instruction"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:id="@+id/firstPart"
            android:hint="@string/submit_hint_one"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:id="@+id/secondPart"
            android:hint="@string/submit_hint_second"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:id="@+id/button3"
            android:onClick="submitJoke"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />
    </LinearLayout>
</ScrollView>