<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/first"
            android:id="@+id/first"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/second"
            android:id="@+id/second"
            android:layout_marginTop="40dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneLiner"
            android:id="@+id/button"
            android:onClick="createOneLiners"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joke"
            android:id="@+id/button2"
            android:onClick="createJokes"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aww"
            android:id="@+id/button3"
            android:onClick="openAww"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />
    </LinearLayout>
</ScrollView>